# rocket-rocc-examples

./: .gitignore  .gitmodules  Makefile  Makefile.in  Makefrag  README.md  configure.ac
bareMetal/: Makefile  accumulator.S  translator.S
patches/: riscv-pk.patch
pk/: Makefile
src/: test-accumulator.c
src/include/: rocc.h
src/main/c/: accumulator.c  accumulator.h  character.h  rocc.h  translator.c  translator.h
src/test/c/: test-accumulator.c
